Fix problem that a long message is overflow and set default avatar for a user

--- a/src/Modules/Station/Components/ChatBox/ChatBox.scss
+++ b/src/Modules/Station/Components/ChatBox/ChatBox.scss
@@ -81,6 +81,7 @@
       padding: 10px 10px;
       flex: 1;
       overflow-y: auto;
+      overflow-x: hidden;
     }
 
     .message-input {
